--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -12,14 +12,14 @@
       {{ if .Site.Copyright }}
       <li class="mr-3 mr-lg-0">{{ .Site.Copyright | safeHTML }}</li>
       {{ else }}
-      <li class="mr-3 mr-lg-0">Theme GitHub Style Remake by <a href='https://github.com/matheuslaidler'>Matheus Laidler</a> <br> Original Theme <a href='https://github.com/MeiK2333/github-style'>Github Style</a> by <a href='https://github.com/MeiK2333'>MeiK2333</a> <br>Blog created with <a href='https://gohugo.io/'>Hugo</a> and <a href='https://pages.github.com/'>Github Pages</a></li>
+      <li class="mr-3 mr-lg-0">Theme <a href='https://github.com/matheuslaidler/github-style-remaster'>GitHub Style Remaster</a> <br>Forked from <a href='https://github.com/MeiK2333/github-style'>Github Style</a> by MeiK2333 <br>Blog created with <a href='https://gohugo.io/'>Hugo</a> and <a href='https://pages.github.com/'>Github Pages</a></li>
       {{ end }}
     </ul>
     <ul class="list-style-none d-flex flex-wrap col-12 flex-justify-center flex-lg-justify-between mb-2 mb-lg-0">
       {{ if .Site.Copyright }}
       <li class="mr-3 mr-lg-0">{{ .Site.Copyright | safeHTML }}</li>
       {{ else }}
-      <li class="mr-3 mr-lg-0"> <center> © Copyright 2020 - All rights reserved <br>M. Laidler - Todos os direitos reservados<br> </center></li>
+      <li class="mr-3 mr-lg-0"> <center> © Copyright 2020 - All rights reserved. <br>M. Laidler - Todos os direitos reservados.<br>Todos os devidos créditos ao criador original do tema.</center></li>
       {{ end }}
     </ul>
     <center><ul class="list-style-none d-flex flex-wrap col-12 flex-justify-center flex-lg-justify-between mb-2 mb-lg-0">
