--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -19,14 +19,14 @@
       {{ if .Site.Copyright }}
       <li class="mr-3 mr-lg-0">{{ .Site.Copyright | safeHTML }}</li>
       {{ else }}
-      <li class="mr-3 mr-lg-0"> <center> © Copyright 2020 - All rights reserved. <br>M. Laidler - Todos os direitos reservados.<br>Todos os devidos créditos ao criador original do tema.</center></li>
+      <li class="mr-3 mr-lg-0"> <center> © Copyright 2024 - All rights reserved. </center></li>
       {{ end }}
     </ul>
     <center><ul class="list-style-none d-flex flex-wrap col-12 flex-justify-center flex-lg-justify-between mb-2 mb-lg-0">
       {{ if .Site.Copyright }}
       <li class="mr-3 mr-lg-0">{{ .Site.Copyright | safeHTML }}</li>
       {{ else }}
-      <li class="mr-3 mr-lg-0"> Road2Tech<br> WayOfSec <br>Finalidade Acadêmica</li>
+      <li class="mr-3 mr-lg-0"> Theme By M.Laidler</li>
       {{ end }}
     </ul></center>
   
