--- a/layouts/partials/overview.html
+++ b/layouts/partials/overview.html
@@ -31,6 +31,10 @@
         </article>
         <center>
           <br>
+          <a class="footer-octicon d-none d-lg-block mr-lg-4" style="text-decoration:none;">  ╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼╾╼ 
+            <img class="footer-octicon d-none d-lg-block mr-lg-4" style="height:10ch;width:auto;margin-inline:2ch;margin-top:-6ch;" src="{{ .Site.BaseURL }}/images/menu/matheus.png"></a>
+          <br>
+
             <p>Favor, manter sempre os créditos/referências ao re-utilizar os materiais ou imagens. Este acervo não possui fins lucrativos. 
               <p><strong>AVISO: </strong>Projeto de finalidade acadêmica, não me responsabilizo por atos de terceiros.</p>
          </center>
