--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -55,6 +55,14 @@
       </svg>
     </a>
   </div>
+
+  <!-- my things in dev / test -->
+  <!-- primeira arrumação / embaixo v1 --
+  <img class="footer-octicon d-none d-lg-block mr-lg-4" style="height:12ch;width:auto;margin-inline:134ch;margin-top:-6.5ch;" src="{{ .Site.BaseURL }}/images/menu/matheus.png">
+  <li class="footer-octicon d-none d-lg-block mr-lg-4" style="height:12ch;width:auto;margin-inline:48ch;margin-top:-20.5ch;">O proprietário deste site não assume quaisquer responsabilidades provenientes das ações de terceiros. </li>
+  -->
+  <!-- segunda arrumação / encima v2 -->
   <img class="footer-octicon d-none d-lg-block mr-lg-4" style="height:10ch;width:auto;margin-inline:136ch;margin-top:-17.5ch;opacity:0.45;" src="{{ .Site.BaseURL }}/images/menu/matheus.png">
   <li class="footer-octicon d-none d-lg-block mr-lg-4" style="height:12ch;width:auto;margin-inline:48ch;margin-top:-7ch;">O proprietário deste site não assume quaisquer responsabilidades provenientes das ações de terceiros. </li>
+  <!---->
 </div>
