--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <!-- https://icons.getbootstrap.com/
-        buscar o que quiser para d=""    -->
+        buscar; d=""    -->
 
 <!-- menu desktop/mobile - matheus laidler: creditos> matheuslaidler.github.io -->
 <nav id="cssmenu">
@@ -18,23 +18,23 @@
     <span class="bar"></span>
   </div>
   <ul>
-    <li class="active"><a href="{{ .Site.BaseURL }}">Acervo</a></li>
-    <li><a href="https://github.com/matheuslaidler" target="_blank">Github</a></li>
-    <li><a href="https://matheuslaidler.github.io/Cryptool/" target="_blank">Cryptool</a> <!-- tool --></li>
+    <li><a href="https://matheuslaidler.github.io/" target="_parent">Início</a></li>
+    <li class="active"><a href="{{ .Site.BaseURL }}" target="_parent">Blog</a></li>
+    <li><a href="https://matheuslaidler.github.io/Cryptool/" target="_parent">Cryptool</a> <!-- tool --></li>
     <li class="has-sub">
     <a href="#pages" data-toggle="dropdown">Páginas</a>
     <ul>
-      <li><a href="https://github.com/matheuslaidler" target="_blank">Github</a></li>
-      <li><a href="https://matheuslaidler.gitbook.io/" target="_blank">Rascunhos</a></li> <!-- articles/drafts/sketches -->
-      <li><a href="https://road2tech.github.io/" target="_blank">Road2Tech</a></li> <!-- projeto1 -->
-      <li><a href="https://wayofsec.github.io/" target="_blank">WayOfSec</a></li> <!-- projeto2 -->
-      <li><a href="https://youtube.com/@matheuslaidler" target="_blank">Youtube</a></li> <!-- projeto3 -->
+      <li><a href="https://matheuslaidler.gitbook.io/" target="_blank">Rascunhos ⿻</a></li> <!-- articles/drafts/sketches -->
+      <li><a href="https://github.com/matheuslaidler" target="_blank">Github ⿻</a></li>
+      <!-- <li><a href="https://road2tech.github.io/" target="_blank">Road2Tech ⿻</a></li> <-- projeto1 -->
+      <!-- <li><a href="https://wayofsec.github.io/" target="_blank">WayOfSec ⿻</a></li> <-- projeto2 -->
+      <li><a href="https://youtube.com/@matheuslaidler" target="_blank">Youtube ⿻</a></li> <!-- projeto3 -->
     </ul>
       </li>
       <li class="has-sub">
-      <a href="#donates" data-toggle="dropdown">Doação</a> <!-- donates -->
+      <a href="#donates" data-toggle="dropdown">Doação ❤</a> <!-- donates -->
       <ul>
-        <li><a href="https://github.com/sponsors/matheuslaidler" target="_blank" title="Github Sponsor">Github Sponsor</a></li>
+        <li><a href="https://github.com/sponsors/matheuslaidler" target="_blank" title="Github Sponsor">Github Sponsor ⿻</a></li>
         <li class="has-sub">
           <a href="https://www.paypal.com/donate/?hosted_button_id=SJYYS28HZPU9A" title="Paypal">PayPal</a>
             <!-- my paypal links: 
@@ -100,6 +100,8 @@
           <path fill-rule="evenodd"
             d="M15.545 6.558a9.4 9.4 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.7 7.7 0 0 1 5.352 2.082l-2.284 2.284A4.35 4.35 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.8 4.8 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.7 3.7 0 0 0 1.599-2.431H8v-3.08z"
             >
+            <!-- https://icons.getbootstrap.com/
+            -->
           </path>
         </svg>
       </a>
